add: endpoint getloans and docs loans
